Added a couple comments.
# Conflicts:
#	app/src/main/java/com/example/myapplication/WelcomeScreen.java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@ you can easily change your wallpaper without having to navigate the settings!"
         android:layout_width="262dp"
         android:layout_height="48dp"
         android:text="Let's Go!"
+        android:onClick="changeToMain"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
