--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -18,10 +18,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/email_text"
+        android:id="@+id/support_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email: vikrantverma11@outlook.com"
+        android:gravity="center"
+        android:text="Email: vikrantverma11@outlook.com\n\nor\n\nContact me on GitHub @crayzeerr"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
